--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <title>Sempra Supra</title>
 </head>
 <body>
-    <p class="nothing">Pkasemer :) </p>
+    <div  class="nothing" >
+        <h1>PATRICK OKELLO</h1>
+        <h4>Full Stack Software Developer</h4>
+        
+        <p>| 0787250196 | pkasemer@gmail.com</p>
+        <p>
+            <a href=" https://github.com/patrickhamzaokello">GitHub</a>
+            <a href=" https://www.linkedin.com/in/patrick-okello-712a05147/">LinkedIn</a>
+            <a href=" https://twitter.com/patrick_hamza">Twitter</a>
+        </p>
+    </div>
+    
 </body>
 </html>
